# swirl-mcp-server

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/workflows/: ci.yml  spell-checker.yml
examples/: claude_code.json  claude_desktop.json  cursor.json
src/swirl_mcp/: __init__.py  __main__.py  client.py  config.py  formatting.py  models.py  server.py
tests/: conftest.py  test_client.py  test_formatting.py  test_tools.py
