[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swirl-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for SWIRL Metasearch — federated search and RAG for LLM clients."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [{ name = "Sid Probstein", email = "sidprobstein@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "swirl", "search", "rag", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
swirl-mcp = "swirl_mcp.server:main"

[project.urls]
Homepage = "https://github.com/swirlai/swirl-mcp-server"
Issues = "https://github.com/swirlai/swirl-mcp-server/issues"
SWIRL = "https://github.com/swirlai/swirl-search"

[tool.hatch.build.targets.wheel]
packages = ["src/swirl_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
